--- a/src/main/resources/templates/books.html
+++ b/src/main/resources/templates/books.html
@@ -210,7 +210,7 @@
                                     </p>
                                     <!-- language -->
                                     <p class="mb-3 text-dark small">
-                                        <span class="font-weight-light">Language </span><strong th:text="${book.language}"></strong>
+                                        <span class="font-weight-light">Language </span><strong th:text="${book.language.text}"></strong>
                                     </p>
                                 </div>
                                 <!-- actions -->
