--- a/src/main/resources/templates/categories.html
+++ b/src/main/resources/templates/categories.html
@@ -11,7 +11,7 @@
             <!-- main categories -->
             <div th:replace="fragments/components::mainCatsNavBar"></div>
             <!-- title -->
-            <div th:replace="fragments/components::title_1_11(text = 'Categories')"></div>
+            <div th:replace="fragments/components::title_1_10_1(text = 'Categories')"></div>
             <!-- main content -->
             <div class="row">
                 <div class="col-sm-1"></div>
