--- a/src/main/resources/templates/checkoutForm.html
+++ b/src/main/resources/templates/checkoutForm.html
@@ -11,7 +11,7 @@
             <!-- main categories -->
             <div th:replace="fragments/components::mainCatsNavBar"></div>
             <!-- title -->
-            <div th:replace="fragments/components::title(text = 'Checkout')"></div>
+            <div th:replace="fragments/components::title_1_10_1(text = 'Checkout')"></div>
             <!-- payment error -->
             <div class="row my-1">
                 <!-- left margin -->
@@ -28,16 +28,16 @@
                 <!-- left margin -->
                 <div class="col-sm-1"></div>
                 <!-- checkout form -->
-                <div class="col-sm-6">
+                <div class="col-sm-7">
                     <form class="needs-validation" novalidate id='payment-form'>
                         <!-------------------------------------------------------------------------Receipt Email-->
                         <input type="hidden" id="receiptEmail" th:value="${user.email}">
                         <!-------------------------------------------------------------------------Recipient details-->
-                        <label class="mt-3 text-dark font-weight-light">Recipient details</label>
+                        <label class="text-dark font-weight-light">Recipient details</label>
                         <div class="input-group mb-3">
                             <!-- full name -->
                             <div class="input-group-prepend">
-                                <span class="input-group-text"><small class="font-weight-lighter">Name</small></span>
+                                <span class="input-group-text"><small class="font-weight-lighter">Name *</small></span>
                             </div>
                             <input class="form-control" type="text" id="name" required th:pattern="${@environment.getProperty('fm.validation.regex.text-basic')}">
                             <!-- phone -->
@@ -53,7 +53,7 @@
                         <!-- street line1-->
                         <div class="input-group mb-3">
                             <div class="input-group-prepend">
-                                <span class="input-group-text"><small class="font-weight-lighter">Address</small></span>
+                                <span class="input-group-text"><small class="font-weight-lighter">Address *</small></span>
                             </div>
                             <input class="form-control" type="text" id="line1" required th:pattern="${@environment.getProperty('fm.validation.regex.text-basic')}">
                             <div class="invalid-feedback">Please fill out this field correctly</div>
@@ -64,29 +64,29 @@
                         <!-- city and postal code -->
                         <div class="input-group mb-3">
                             <div class="input-group-prepend">
-                                <span class="input-group-text"><small class="font-weight-lighter">City</small></span>
+                                <span class="input-group-text"><small class="font-weight-lighter">City *</small></span>
                             </div>
                             <input class="form-control" type="text" id="city" required th:pattern="${@environment.getProperty('fm.validation.regex.text-basic')}">
                             <div class="input-group-prepend">
-                                <span class="input-group-text"><small class="font-weight-lighter">Postal Code</small></span>
+                                <span class="input-group-text"><small class="font-weight-lighter">Postal Code *</small></span>
                             </div>
                             <input class="form-control" type="text" id="postalCode" required style="max-width: 25%" th:pattern="${@environment.getProperty('fm.validation.regex.text-basic')}">
                             <div class="invalid-feedback">Please fill out this field correctly</div>
                         </div>
-                        <!-- country and province -->
+                        <!-- province and country -->
                         <div class="input-group mb-3">
                             <div class="input-group-prepend">
-                                <span class="input-group-text"><small class="font-weight-lighter">Country</small></span>
-                            </div>
-                            <input class="form-control" type="text" id="country" required th:pattern="${@environment.getProperty('fm.validation.regex.text-basic')}">
-                            <div class="input-group-prepend">
-                                <span class="input-group-text"><small class="font-weight-lighter">Province</small></span>
+                                <span class="input-group-text"><small class="font-weight-lighter">Province *</small></span>
                             </div>
                             <input class="form-control" type="text" id="province" required th:pattern="${@environment.getProperty('fm.validation.regex.text-basic')}">
+                            <div class="input-group-prepend">
+                                <span class="input-group-text"><small class="font-weight-lighter">Country *</small></span>
+                            </div>
+                            <input class="form-control" type="text" id="country" required th:pattern="${@environment.getProperty('fm.validation.regex.text-basic')}">
                             <div class="invalid-feedback">Please fill out this field correctly</div>
                         </div>
                         <!-------------------------------------------------------------------------Payment info-->
-                        <label class="text-dark font-weight-light" for="card-element">Credit/Debit Card</label>
+                        <label class="text-dark font-weight-light" for="card-element">Credit/Debit Card *</label>
                         <div class="form-group">
                             <div class="form-control" id="card-element" style='height: 2.4em; padding-top: .7em;'>
                                 <!-- card element here -->
@@ -104,60 +104,51 @@
                                 <span class="font-weight-lighter">€</span><span class="font-weight-bolder" th:text="${user.cart.price}"></span>
                             </button>
                             <!-- Cancel button -->
-                            <a class="btn btn-outline-secondary px-3" th:href="@{/home}">
-                                <span class="font-weight-lighter small">Cancel</span>
-                            </a>
-                            <!-- success link -->
-                            <a th:href="@{/user/success}" id="successLink" style="display: none"></a>
+                            <a th:replace="fragments/components::cancelButtonToBack(text = 'Cancel')"></a>
                         </div>
                     </form>
                 </div>
                 <!-- purchase summary -->
-                <div class="col-sm-4">
-                    <div class="row">
-                        <div class="col-sm-1"></div>
-                        <div class="col-sm-10 d-flex flex-column">
+                <div class="col-sm-3">
+                    <div class="row bg-white">
+                        <div class="col-sm-12 d-flex flex-column">
                             <!-- panel title -->
-                            <div class="d-flex justify-content-center mt-3">
+                            <div class="align-self-center mt-3">
                                 <p class="text-dark font-weight-light">Purchase Summary</p>
                             </div>
-                            <!-- purchase info -->
-                            <div class="d-flex flex-column">
-                                <!-- single book -->
-                                <div class="d-flex my-3 align-items-end" th:each="item : ${user.cart.items}">
-                                    <!-- left content -->
-                                    <div class="mr-auto">
-                                        <div class="d-flex flex-column">
-                                            <!-- book title -->
-                                            <div>
-                                                <a class="text-info font-weight-bold" th:href="@{/book/{id}(id=${item.book.id})}" style="text-decoration: none">
-                                                    <p class="my-0" th:unless="${item.book.title.isBlank()}">
-                                                        <span th:text="${item.book.title.substring(0, T(java.lang.Math).min(item.book.title.length(), __${@environment.getProperty('fm.front-end.checkout.title-max-size')}__))}">Book title</span>
-                                                    </p>
-                                                    <p class="my-0" th:if="${item.book.title.isBlank()}">
-                                                        <small><i>unknown title</i></small>
-                                                    </p>
-                                                </a>
-                                            </div>
-                                            <!-- price composition -->
-                                            <div class="my-0 small text-dark">
-                                                <span th:text="${item.quantity}"></span> x <span class="font-weight-lighter">€</span><span th:text="${item.book.price}"></span>
-                                            </div>
+                            <!-- single book -->
+                            <div class="d-flex my-3 align-items-end" th:each="item : ${user.cart.items}">
+                                <!-- left content -->
+                                <div class="mr-auto">
+                                    <div class="d-flex flex-column">
+                                        <!-- book title -->
+                                        <div>
+                                            <a class="text-info font-weight-bold" th:href="@{/book/{id}(id=${item.book.id})}" style="text-decoration: none">
+                                                <p class="my-0" th:unless="${item.book.title.isBlank()}">
+                                                    <span th:text="${item.book.title.substring(0, T(java.lang.Math).min(item.book.title.length(), __${@environment.getProperty('fm.front-end.checkout.title-max-size')}__))}">Book title</span>
+                                                </p>
+                                                <p class="my-0" th:if="${item.book.title.isBlank()}">
+                                                    <small><i>unknown title</i></small>
+                                                </p>
+                                            </a>
+                                        </div>
+                                        <!-- price composition -->
+                                        <div class="my-0 small text-dark">
+                                            <span th:text="${item.quantity}"></span> x <span class="font-weight-lighter">€ </span><span th:text="${item.book.price}"></span>
                                         </div>
                                     </div>
-                                    <!-- right content -->
-                                    <div>
-                                        <p class="my-0 small text-dark"><span class="font-weight-lighter">€</span><span th:text="${item.price}">100</span></p>
-                                    </div>
+                                </div>
+                                <!-- right content -->
+                                <div>
+                                    <p class="my-0 small text-dark"><span class="font-weight-lighter">€ </span><span th:text="${item.price}">100</span></p>
                                 </div>
                             </div>
                             <!-- final price -->
                             <div class="d-flex my-3 text-dark">
                                 <div class="mr-auto"><span class="font-weight-bolder">Total</span></div>
-                                <div><span class="font-weight-lighter">€</span><span class="font-weight-bolder" id="total" th:text="${user.cart.price}">380</span></div>
+                                <div><span class="font-weight-lighter">€ </span><span class="font-weight-bolder" id="total" th:text="${user.cart.price}">380</span></div>
                             </div>
                         </div>
-                        <div class="col-sm-1"></div>
                     </div>
                 </div>
                 <!-- right margin -->
@@ -169,6 +160,7 @@
         <!-- checkout -->
         <i th:replace="fragments/components::host-address"></i>
         <i id="pk" th:attr="pk=${@environment.getProperty('fm.payment.stripe.key.public')}"></i>
+        <a th:href="@{/user/success}" id="successLink" style="display: none"></a>
         <script th:src="@{/js/checkout.js}"></script>
     </body>
 </html>
