--- a/src/main/resources/templates/editPasswordForm.html
+++ b/src/main/resources/templates/editPasswordForm.html
@@ -11,39 +11,50 @@
             <!-- main categories -->
             <div th:replace="fragments/components::mainCatsNavBar"></div>
             <!-- title -->
-            <div th:replace="fragments/components::title(text = 'Edit Password')"></div>
+            <div th:replace="fragments/components::title_2_8_2(text = 'Password Edition')"></div>
             <!-- main content -->
             <div class="row">
-                <div class="col-sm-3"></div>
-                <div class="col-sm-6">
-                    <form class="needs-validation" novalidate id="form" th:action="@{/editPassword}" th:object="${passwordForm}" method="POST" action="#">
-                        <!-- Current Password -->
-                        <div class="form-group">
-                            <label for="currentPassword">Current Password:</label>
-                            <input class="form-control" type="password" th:field="*{currentPassword}" id="currentPassword" placeholder="enter current password" required/>
-                            <div class="invalid-feedback">Please introduce your current password</div>
+                <!-- left margin -->
+                <div class="col-sm-2"></div>
+                <!-- form -->
+                <div class="col-sm-8">
+                    <form class="needs-validation" novalidate id="form" th:action="@{/editPassword}" th:object="${passwordForm}" method="POST">
+                        <div th:replace="fragments/components::backendRequestParamError"></div>
+                        <div class="form-row">
+                            <div class="col-sm-12">
+                                <!-- Current Password -->
+                                <div class="form-group">
+                                    <label class="small font-weight-lighter" for="currentPassword">Current Password *</label>
+                                    <input class="form-control" type="password" th:field="*{currentPassword}" id="currentPassword" placeholder="enter your current password" required/>
+                                    <div class="invalid-feedback">Please introduce your current password</div>
+                                </div>
+                                <div th:replace="fragments/components::backendSpecificObjectFieldErrors('currentPassword')"></div>
+                                <!-- New Password -->
+                                <div class="form-group">
+                                    <label class="small font-weight-lighter" for="newPassword">New Password *</label>
+                                    <input class="form-control" type="password" th:field="*{password}" id="newPassword" placeholder="enter the desired new password" required th:pattern="${@environment.getProperty('fm.validation.regex.password')}" th:title="#{password.invalidFormat}"/>
+                                    <div class="invalid-feedback" th:text="#{password.invalidFormat}">Please fill out this field with a valid password</div>
+                                </div>
+                                <div th:replace="fragments/components::backendSpecificObjectFieldErrors('password')"></div>
+                                <!-- Confirm New Password -->
+                                <div class="form-group">
+                                    <label class="small font-weight-lighter" for="newPasswordConfirm">Confirm New Password *</label>
+                                    <input class="form-control" type="password" th:field="*{matchingPassword}" id="newPasswordConfirm" placeholder="confirm the new password" required pattern=".*" title="Please enter the same password as above"/>
+                                    <div class="invalid-feedback" th:text="#{password.notMatching}">Please enter the same password as above</div>
+                                </div>
+                            </div>
+                            <!-- submit or cancel -->
+                            <div class="col-sm-12 d-flex align-items-end">
+                                <button th:replace="fragments/components::submitButton(text = 'Change password')"></button>
+                                <div class="ml-auto">
+                                    <a th:replace="fragments/components::cancelButtonToBack(text = 'Cancel')"></a>
+                                </div>
+                            </div>
                         </div>
-                        <div th:replace="fragments/components::backendSpecificObjectFieldErrors('currentPassword')"></div>
-                        <!-- New Password -->
-                        <div class="form-group">
-                            <label for="newPassword">New Password:</label>
-                            <input class="form-control" type="password" th:field="*{password}" id="newPassword" placeholder="enter new password" required th:pattern="${@environment.getProperty('fm.validation.regex.password')}" th:title="#{password.invalidFormat}"/>
-                            <div class="invalid-feedback" th:text="#{password.invalidFormat}">Please fill out this field with a valid password</div>
-                        </div>
-                        <div th:replace="fragments/components::backendSpecificObjectFieldErrors('password')"></div>
-                        <!-- Confirm New Password -->
-                        <div class="form-group">
-                            <label for="newPasswordConfirm">Confirm New Password:</label>
-                            <input class="form-control" type="password" th:field="*{matchingPassword}" id="newPasswordConfirm" placeholder="confirm new password" required pattern=".*" title="Please enter the same password as above"/>
-                            <div class="invalid-feedback" th:text="#{password.notMatching}">Please enter the same password as above</div>
-                        </div>
-                        <div th:replace="fragments/components::backendSpecificObjectFieldErrors('matchingPassword')"></div>
-                        <!-- Save or Cancel -->
-                        <button th:replace="fragments/components::saveButton"></button>
-                        <a th:replace="fragments/components::cancelButtonToHome"></a>
                     </form>
                 </div>
-                <div class="col-sm-3"></div>
+                <!-- right margin -->
+                <div class="col-sm-2"></div>
             </div>
         </div>
         <!-- footer -->
