--- a/src/main/resources/templates/resetPasswordForm.html
+++ b/src/main/resources/templates/resetPasswordForm.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:th="http://www.thymeleaf.org"
       lang="en">
-    <head th:replace="fragments/components::head('Reset Password')"></head>
+    <head th:replace="fragments/components::head('Password Recovery')"></head>
     <body>
         <!-- fm-content -->
         <div class="container-fluid fm-content">
@@ -11,25 +11,36 @@
             <!-- main categories -->
             <div th:replace="fragments/components::mainCatsNavBar"></div>
             <!-- title -->
-            <div th:replace="fragments/components::title(text = 'Reset Password')"></div>
+            <div th:replace="fragments/components::title_2_8_2(text = 'Password Recovery')"></div>
             <!-- main content -->
             <div class="row">
-                <div class="col-sm-3"></div>
-                <div class="col-sm-6">
-                    <div th:replace="fragments/components::backendRequestParamError"></div>
-                    <form class="needs-validation" novalidate id="form" th:action="@{/resetPassword}" method="POST" action="#">
-                        <!-- email -->
-                        <div class="form-group">
-                            <label for="email">E-mail:</label>
-                            <input class="form-control" type="email" name="email" id="email" placeholder="enter your email" required th:pattern="${@environment.getProperty('fm.validation.regex.email')}">
-                            <div class="invalid-feedback">Please fill out this field with your email</div>
+                <!-- left margin -->
+                <div class="col-sm-2"></div>
+                <!-- form -->
+                <div class="col-sm-8">
+                    <form class="needs-validation" novalidate id="form" th:action="@{/resetPassword}" method="POST">
+                        <div th:replace="fragments/components::backendRequestParamError"></div>
+                        <div class="form-row">
+                            <div class="col-sm-12">
+                                <!-- email -->
+                                <div class="form-group">
+                                    <label class="small font-weight-lighter" for="email">E-mail *</label>
+                                    <input class="form-control" type="email" name="email" id="email" placeholder="enter your email" required th:pattern="${@environment.getProperty('fm.validation.regex.email')}">
+                                    <div class="invalid-feedback">Please fill out this field with your email</div>
+                                </div>
+                            </div>
+                            <!-- submit or cancel -->
+                            <div class="col-sm-12 d-flex align-items-end">
+                                <button th:replace="fragments/components::submitButton(text = 'Recover Password')"></button>
+                                <div class="ml-auto">
+                                    <a th:replace="fragments/components::cancelButtonToBack(text = 'Cancel')"></a>
+                                </div>
+                            </div>
                         </div>
-                        <!-- save or cancel -->
-                        <button th:replace="fragments/components::saveButton"></button>
-                        <a th:replace="fragments/components::cancelButtonToHome"></a>
                     </form>
                 </div>
-                <div class="col-sm-3"></div>
+                <!-- right margin -->
+                <div class="col-sm-2"></div>
             </div>
         </div>
         <!-- footer -->
