--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -11,7 +11,7 @@
             <!-- main categories -->
             <div th:replace="fragments/components::mainCatsNavBar"></div>
             <!-- title -->
-            <div th:replace="fragments/components::title_1_11('Users')"></div>
+            <div th:replace="fragments/components::title_1_10_1('Users')"></div>
             <!-- pagination control -->
             <div class="row">
                 <!-- left margin -->
