--- a/src/main/resources/templates/images.html
+++ b/src/main/resources/templates/images.html
@@ -11,7 +11,7 @@
             <!-- main categories -->
             <div th:replace="fragments/components::mainCatsNavBar"></div>
             <!-- title -->
-            <div th:replace="fragments/components::title_1_11(text = 'Images')"></div>
+            <div th:replace="fragments/components::title_1_10_1(text = 'Images')"></div>
             <!-- pagination control -->
             <div class="row">
                 <!-- left margin -->
