--- a/src/main/resources/templates/orders.html
+++ b/src/main/resources/templates/orders.html
@@ -12,7 +12,12 @@
             <!-- main categories -->
             <div th:replace="fragments/components::mainCatsNavBar"></div>
             <!-- title -->
-            <div th:replace="fragments/components::title_1_11('Orders')"></div>
+            <div sec:authorize="hasRole('ADMIN')">
+                <div th:replace="fragments/components::title_1_10_1('Orders')"></div>
+            </div>
+            <div sec:authorize="hasRole('USER')">
+                <div th:replace="fragments/components::title_1_10_1(text = ${user.profile.firstName} + '\'s Purchases')"></div>
+            </div>
             <!-- pagination control -->
             <div class="row">
                 <!-- left margin -->
